force-app/main/default/objects/TCP_Change_Cancel_Order_Line_Items__c/TCP_Change_Cancel_Order_Line_Items__c.object-meta.xml
<CustomObject>
    <description>This Object will hold the information for the order line items that are being changed.</description>
    <label>Change/Cancel Order Line Items</label>
    <nameField>
        <displayFormat>Item-{0000}</displayFormat>
        <label>Change/Cancel Order Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change/Cancel Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>