force-app/main/default/objects/TCP_Change_Cancel_Order_Line_Items__c/fields/Change_Cancel_Request_Order__c.field-meta.xml
<CustomField>
    <fullName>Change_Cancel_Request_Order__c</fullName>
    <label>Change/Cancel Request Order</label>
    <referenceTo>TCP_Change_Cancel_Request__c</referenceTo>
    <relationshipLabel>Change/Cancel Order Line Items</relationshipLabel>
    <relationshipName>Change_Cancel_Order_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>