force-app/main/default/objects/TCP_Change_Cancel_Order_Line_Items__c/fields/Delivery_Collection_Date_New__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Collection_Date_New__c</fullName>
    <label>Delivery/Collection Date New</label>
    <type>Date</type>
</CustomField>