force-app/main/default/objects/TCP_Change_Cancel_Order_Line_Items__c/fields/Instruction__c.field-meta.xml
<CustomField>
    <fullName>Instruction__c</fullName>
    <label>Instruction</label>
    <type>TextArea</type>
</CustomField>