force-app/main/default/objects/TCP_Change_Cancel_Order_Line_Items__c/fields/Instruction_New__c.field-meta.xml
<CustomField>
    <fullName>Instruction_New__c</fullName>
    <label>Instruction New</label>
    <type>TextArea</type>
</CustomField>