force-app/main/default/objects/TCP_Change_Cancel_Order_Line_Items__c/fields/Item_number__c.field-meta.xml
<CustomField>
    <fullName>Item_number__c</fullName>
    <label>Item number</label>
    <type>TextArea</type>
</CustomField>