force-app/main/default/objects/TCP_Change_Cancel_Order_Line_Items__c/fields/Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Material_Number__c</fullName>
    <label>Material Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>