force-app/main/default/objects/TCP_Change_Cancel_Order_Line_Items__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>