force-app/main/default/objects/TCP_Change_Cancel_Order_Line_Items__c/fields/Sales_Order_Line_Item_No__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Line_Item_No__c</fullName>
    <label>Sales Order Line Item No</label>
    <length>6</length>
    <type>Text</type>
</CustomField>