force-app/main/default/objects/TCP_Change_Cancel_Order_Line_Items__c/fields/Shell_Contract_No__c.field-meta.xml
<CustomField>
    <fullName>Shell_Contract_No__c</fullName>
    <label>Shell Contract No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>