force-app/main/default/objects/TCP_Change_Cancel_Order_Line_Items__c/fields/TCP_Line_Item_Modify_Cancel_Status__c.field-meta.xml
<CustomField>
    <fullName>TCP_Line_Item_Modify_Cancel_Status__c</fullName>
    <description>Copy of Line-item status when history record is created</description>
    <inlineHelpText>Copy of Line-item status when history record is created</inlineHelpText>
    <label>Line Item Modify/Cancel Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>