force-app/main/default/objects/TCP_Change_Cancel_Order_Line_Items__c/fields/TCP_Modification_Cancellation_Status__c.field-meta.xml
<CustomField>
    <fullName>TCP_Modification_Cancellation_Status__c</fullName>
    <defaultValue>&quot;No Change&quot;</defaultValue>
    <description>To capture Modification/Cancellation Status of the change/cancel order line item.</description>
    <inlineHelpText>To capture Modification/Cancellation Status of the change/cancel order line item.</inlineHelpText>
    <label>Modification/Cancellation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Change</fullName>
                <default>true</default>
                <label>No Change</label>
            </value>
            <value>
                <fullName>Modification</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>