force-app/main/default/objects/TCP_Change_Cancel_Order_Line_Items__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>