force-app/main/default/objects/TCP_Change_Cancel_Order_Line_Items__c/fields/Unit_New__c.field-meta.xml
<CustomField>
    <fullName>Unit_New__c</fullName>
    <label>Unit New</label>
    <length>10</length>
    <type>Text</type>
</CustomField>